execute some copilot suggestions